商户资质的图片上传到阿里云和七牛云和资质申请信息的接口

--- a/huiminpay_merchant_application/src/main/resources/bootstrap.yml
+++ b/huiminpay_merchant_application/src/main/resources/bootstrap.yml
@@ -24,6 +24,9 @@ spring:
           data-id: spring-boot-http.yaml
           group: COMMON_GROUP
           refresh: true
+        - data-id: qiniu_common.yaml
+          group: COMMON_GROUP
+          refresh: true
   # 自己配置短信发送的地址及参数
 sms:
   url: http://localhost:56085/sailing
