--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>huiminpay_common</module>
         <module>huiminpay_merchant_application</module>
         <module>huiminpay_merchant</module>
+        <module>generator</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
